# BabbleCast

./: .gitignore  INSTALL.md  LICENSE  POLLING_AUDIT.md  README.md  RESEARCH_LOG.md  main.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt
GoonFiles/: BabbleCastAndroidAddressingSweep06.17.2026.md  BabbleCastDesktopAddressingSweep06.17.2026.md  BabbleCastMissedIssuesSweep06.17.2026.md  BabbleCastMobileAndroidAudit06.17.2026.md  BabbleCastRoomPasswordSweep06.17.2026.md  BabbleCastShutdownSweep06.17.2026.md  MASTER-BabbleCastAndroidSweep06.17.2026.md  MASTER-BabbleCastMissedIssuesSweep06.17.2026.md  MASTER-BabbleCastSweep06.17.2026.md
assets/: README.md  prepare_branding.py
babblecast/: __init__.py  active_tap_chats.py  address.py  cli.py  config.py  constants.py  discovery.py  discovery_beacon.py  killswitch.py  mesh_probe.py  network.py  network_scan.py  paths.py  protocol.py  room_chat.py  room_secrets.py  taps.py  transport_probe.py
docs/: android-voip-audio.md  known-issues.md
mobile/: android_connect.py  android_foreground.py  android_lifecycle.py  android_network.py  app.py  branding.py  build_ios.sh  buildozer.spec  collapsible.py  controller.py  credentials_dialog.py  detail_panel.py  display_name.py  main.py  peer_dialog.py  permissions.py  platform_ui.py  screens.py  scroll_helpers.py  smoke_intent.py  tap_note_dialog.py  theme.py  vertical_meter.py  voice_service.py
scripts/: android_connect_smoke.sh  killswitch-wipe-credentials.py  killswitch.py  linux_smoke_check.py  verify.sh  windows_smoke_check.ps1
(+104 files in other folders)
